<resources>
    <string name="app_name">E-CASE</string>
    <string name="action_settings">Settings</string>
    <string name="Upload">Upload</string>
    <string name="GetWeight">Get Weight</string>
    <string name="Unlock">UNLOCK</string>

    <string name="regfinger">RegFinger</string>
    <string name="delfinger">DelFinger</string>
    <string name="getbattery">GetBattery</string>
    <string name="setphonenum">SetPhonenum</string>

    <string name="Error">Error</string>
    <string name="Complete">Complete</string>
    <string name="IndeterminateProgressSample">Indeterminate Progress Sample</string>
    <string name="IntegerProgressSample">Integer Progress Sample</string>
    <string name="StateChangeSample">State Change Sample</string>
    <string name="ProgressPaddingSample">Progress Padding Sample</string>
    <string name="CustomSelectorSample">Custom Selector Sample</string>

    <array name="sample_list">
        <item>@string/IndeterminateProgressSample</item>
        <item>@string/IntegerProgressSample</item>
        <item>@string/StateChangeSample</item>
        <item>@string/ProgressPaddingSample</item>
        <item>@string/CustomSelectorSample</item>
    </array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_ble_pair">BlePairActivity</string>
    <string name="title_activity_login">E-CASE</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_continue_for_test">Continue for test</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_google">Map</string>
    <string name="title_activity_nav_drawer">E-CASE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="section_format">Hello World from section: %1$d</string>
</resources>
